# avpspider

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: pyproject.toml
avpspider/: avpamerica.html  main.py  scrapy.cfg
avpspider/avpspider/: items.py  middlewares.py  pipelines.py  settings.py
avpspider/avpspider/spiders/: avpamerica.py
tests/: selenium.py  test_selenium.py
