[tool.poetry]
name = "avpspider"
version = "0.1.0"
description = "Scrapes data from AVP americas website"
authors = ["caiobran <caiobran88@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/caiobran/avpspider"

[tool.poetry.dependencies]
python = "^3.8"
scrapy = "^2.7.1"
selenium = "^4.7.2"
webdriver-manager = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
